@@ -6,6 +6,7 @@ Version 8.13 (Unreleased)
 
 - Project quotas are no longer available, and must now be configured via the organizational rate limits.
 - Quotas implementation now requires a tuple of maximum rate and interval window.
+- Added the ability to download an apple compatible crash report for cocoa events.
 
 Version 8.12
 ------------
